# cesnet-openid-remote

./: MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  main.yml
cesnet_openid_remote/: __init__.py  api.py  communities.py  groups.py  handlers.py  identity.py  perun.py  remote.py  version.py
example/: app-fixtures.sh  app-setup.sh  app.py
examples/: app-teardown.sh  app.db
tests/: __init__.py  conftest.py  test_api.py  test_cesnet_openid_remote.py  test_perun_groups.py  test_remote.py
tests/data/: cesnet_openid_response.json
