[metadata]
name = cesnet-openid-remote
version = 3.0.0
description = CESNET OIDC Auth backend for OARepo
authors = Miroslav Bauer <bauer@cesnet.cz>, Juraj Trappl <trappl@cesnet.cz>
readme = README.md
long_description = file:README.md
long_description_content_type = markdown

[options]
python = >=3.9

[options.extras_require]
devs =
    check_manifest
